--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,7 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
+  build:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -32,12 +32,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
+        uses: withastro/action@v3
+  deploy: 
+    needs: build
+    runs-on: ubuntu-latest
+    env: 
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps: 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
