--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,8 +34,9 @@ jobs:
   deploy: 
     needs: build
     runs-on: ubuntu-latest
-    env: 
+    environment: 
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps: 
       - name: Deploy to GitHub Pages
         id: deployment
