--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/open-sans": "^5.2.7",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "astro": "^5.5.6",
     "bulma": "^1.0.4",
     "sharp": "^0.33.5"
